# jpeg

./: Android.mk  CMakeLists.txt  aclocal.m4  configure  jmorecfg.h  makefile.xc
